# s-dometre

./: CMakeLists.txt  README.md  pow.txt  server  server.cpp  server_check.cpp  sin.txt  sqrt.txt  tomyam.cpp
